# fastapi-tweets

./: .gitignore  README.md  alembic.ini  auth.py  builder.sh  db.py  main.py  models.py  pyproject.toml
alembic/versions/: 2cb04ebde8d5_create_phone_number_for_user_column.py  7c1e08f60cd6_generate_initial_migration.py
routers/: admin.py  auth.py  tweets.py  users.py
