[tool.poetry]
name = "fastapi-tweet"
version = "0.1.0"
description = ""
authors = ["therollingambit <therollingambit@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_tweet"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
flake8 = "^6.1.0"
black = "^23.10.1"
isort = "^5.12.0"
sqlalchemy = "^2.0.22"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
